<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/folw"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/tvCar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bar1"
        android:gravity="center"
        android:paddingBottom="@dimen/common_padding"
        android:paddingTop="@dimen/common_padding"
        android:text="@string/shopping_cart"
        android:textAllCaps="false"
        android:textColor="@android:color/background_light"
        android:textSize="18sp" />

    <ListView
        android:id="@+id/lvItem"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/llTotal"
        android:layout_below="@id/tvCar" />

    <LinearLayout
        android:id="@+id/llTotal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/llBottom"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/common_padding"
        android:paddingTop="@dimen/common_padding"
        android:weightSum="1">

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.75"
            android:background="@drawable/bar2"
            android:gravity="center_vertical|end"
            android:text="@string/total_price" />

        <TextView
            android:id="@+id/tvTotalPrice"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:background="@drawable/bar2"
            android:gravity="center"
            android:text=""
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@id/llBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:weightSum="1">

        <Button
            android:id="@+id/bBuy"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:background="@drawable/btn1"
            android:text="@string/buy"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/bClear"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:background="@drawable/btn1"
            android:text="@string/clear_cart"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/bShop"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:background="@drawable/btn1"
            android:text="@string/shop"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="18sp" />
    </LinearLayout>

</RelativeLayout>
