<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/folw"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/tvCar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@drawable/bar1"
        android:gravity="center"
        android:paddingBottom="@dimen/common_padding"
        android:paddingTop="@dimen/common_padding"
        android:text="@string/shopping_cart"
        android:textColor="@android:color/background_light"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tvDressName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvCar"
        android:background="#7fffffff"
        android:padding="@dimen/common_padding"
        android:textAllCaps="true"
        android:textSize="@dimen/header_text_size"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvDressDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvDressName"
        android:background="#7fffffff"
        android:paddingBottom="@dimen/common_padding"
        android:paddingTop="@dimen/common_padding" />

    <ImageView
        android:id="@+id/ivDressPic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/llAction"
        android:layout_below="@id/tvDressDesc"
        android:layout_centerHorizontal="true"
        android:paddingBottom="5dp"
        android:paddingTop="5dp" />

    <LinearLayout
        android:id="@id/llAction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:background="@drawable/bar2"
            android:gravity="center_vertical|end"
            android:text="@string/quantity" />

        <Spinner
            android:id="@+id/spQuantity"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"

            />

        <Button
            android:id="@+id/bOrder"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@drawable/btn1"
            android:text="@string/order"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>
</RelativeLayout>
